# Brainwave

./: .gitignore  .spacedrive  Cargo.toml  Makefile  README.md  auth.db  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qodana.yaml  schema.graphqls
crates/database/: Cargo.toml  auth.db
crates/database/migrations/: 20240810172302_init.sql  20240818141744_add_todo_types_and_relations.sql  20240819115138_add_semester_table.sql  20240821144836_course_details.sql  20240901154736_create-settings-table.sql  20240901161527_add-appointments-table.sql  20240901161527_add_appointments_table.sql
crates/database/old_migrations/: 20240810172302_init.sql  20240819115138_add_semester_table.sql  20241019105510_add_notes_to_todo.sql
crates/database/src/: auth.rs  lib.rs
crates/database/src/models/: appointments.rs  mod.rs  todo.rs  user.rs
crates/database/src/models/_entities/: appointments.rs  calendar_entries.rs  courses.rs  flashcard_references.rs  flashcards.rs  mod.rs  modules.rs  notebooks.rs  notes.rs  prelude.rs  semesters.rs  sessions.rs  settings.rs  taggables.rs  tags.rs  todos.rs  todos_reference.rs  users.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20241029_123444_create_user_table.rs  m20241029_123451_create_semester_table.rs  m20241029_123452_create_modules_table.rs  m20241029_123453_create_courses_table.rs  m20241029_123454_create_notebooks_table.rs  m20241029_123455_create_notes_table.rs  m20241029_123502_create_flashcards_table.rs  m20241029_123510_create_tags_table.rs  m20241029_123511_create_taggables_table.rs  m20241029_123519_create_tags_table.rs  m20241029_123527_create_calendar_entries_table.rs  m20241029_123541_create_flashcard_references_table.rs  m20241029_123549_create_modules_table.rs  m20241029_123558_create_todos_table.rs  m20241029_123610_create_todos_reference_table.rs  m20241029_123619_create_notebooks_table.rs  m20241029_123629_create_courses_table.rs  m20241029_123641_create_session_table.rs  m20241029_135735_create_semester_table.rs  m20241029_210413_add_settings_table.rs  m20241029_210743_add_appointments_table.rs  m20250105_202506_update_course_is_favorite.rs  m20250105_203557_create_exam_table.rs
crates/server/: Cargo.toml  auth.db  schema.graphqls
crates/server/src/: auth.rs  dir.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/graphql/: mod.rs
crates/server/src/graphql/calendar/: helper_functions.rs  mod.rs  mutation.rs  query.rs
crates/server/src/graphql/courses/: mod.rs  mutation.rs  query.rs
crates/server/src/graphql/exams/: mod.rs  mutation.rs  query.rs
crates/server/src/graphql/modules/: mod.rs  mutation.rs  query.rs
crates/server/src/graphql/semester/: mod.rs  mutation.rs  query.rs
crates/server/src/graphql/todos/: mod.rs  mutation.rs  query.rs
crates/server/src/models/: course.rs  exam.rs  mod.rs  module.rs  recurring_appointment.rs  semester.rs  todo.rs
crates/server/src/models/_entities/: appointment.rs  calendar_entry.rs  course.rs  exam.rs  flashcard.rs  flashcard_reference.rs  mod.rs  module.rs  note.rs  notebook.rs  prelude.rs  sea_orm_active_enums.rs  semester.rs  session.rs  settings.rs  tag.rs  taggable.rs  todo.rs  todo_reference.rs  user.rs
crates/server/src/routers/: auth.rs  graphql.rs  mod.rs
crates/src-tauri/: tauri.conf.json
crates/types/: Cargo.toml
crates/types/src/: calendar.rs  course.rs  lib.rs  module.rs  recurring_appointment.rs  semester.rs  settings.rs  todo.rs  user.rs
ui/: auth.db  biome.json  bun.lockb  codegen.ts  components.json  index.html  package.json  pnpm-lock.yaml  schema.graphql  schema.graphqls  tailwind.config.js  tsconfig.json  vite.config.ts
ui/.storybook/: preview.ts
ui/public/locales/de/: header.json  translation.json
ui/public/locales/en/: global.json  header.json  translation.json
ui/src/: App.css  auth.tsx  execute.ts  i18n.ts  main.tsx  routeTree.gen.ts
ui/src-tauri/: Cargo.toml  schema.graphqls  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/__generated__/: gql.ts  graphql.ts
ui/src/components/brainwave/calendar/: import_dialog.tsx
ui/src/components/ui/: breadcrumb.tsx  calendar.tsx  carousel.tsx  combobox.tsx  input-otp.tsx  menubar.tsx  pagination.tsx  sonner.tsx
ui/src/graphql/: fragment-masking.ts  gql.ts  graphql.ts  types.ts
ui/src/lib/: auth_adapter.ts  axios_client.ts  date.ts
ui/src/lib/auth/: adapter.ts  functions.ts
ui/src/lib/semester/: functions.ts
ui/src/lib/stores/: nav.ts  semester_stepper.ts  settings.ts  user.ts
ui/src/lib/tauri/: window.ts
ui/src/lib/utils/: calendar.ts
ui/src/routes/: __root.tsx  _authenticated.tsx  login.tsx  signup.tsx
ui/src/routes/_authenticated/: calendar.tsx  courses.tsx  flashcards.tsx  index.tsx  notebooks.tsx  notes.tsx  semester_stepper.tsx  swappy.tsx  test.tsx  todos.tsx
ui/src/stories/shadcn/: accordion.stories.tsx  alert-dialog.stories.tsx  alert.stories.tsx  aspect-ratio.stories.tsx  avatar.stories.tsx  badge.stories.tsx  breadcrumb.stories.tsx  button.stories.tsx  calendar.stories.tsx  card.stories.tsx  carousel.stories.tsx  checkbox.stories.tsx  collapsible.stories.tsx  command.stories.tsx  context-menu.stories.tsx  dialog.stories.tsx  drawer.stories.tsx  dropdown-menu.stories.tsx  form.stories.tsx  hover-card.stories.tsx  input-otp.stories.tsx  input.stories.tsx  label.stories.tsx  menubar.stories.tsx  navigation-menu.stories.tsx  pagination.stories.tsx  popover.stories.tsx  progress.stories.tsx  radio-group.stories.tsx  resizable.stories.tsx  scroll-area.stories.tsx  select.stories.tsx  separator.stories.tsx  sheet.stories.tsx  skeleton.stories.tsx  slider.stories.tsx  sonner.stories.tsx  switch.stories.tsx  table.stories.tsx  tabs.stories.tsx  (+4 more)
(+54 files in other folders)
