[workspace]
resolver = "2"
members = [ "crates/database", "crates/server",
"ui/src-tauri"]

[workspace.dependencies]
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0"
anyhow = "1.0"
axum = { version = "0.7.5", features = [] }
serde = { version = "1.0.204" , features = ["derive"]}
tracing-subscriber = "0.3.18"
tower = "0.4.13"
tower-http = "0.5.2"
