[workspace]
resolver = "2"
members = [ "crates/database", "crates/server", "crates/types",
"ui/src-tauri"]

[workspace.dependencies]
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate", "macros", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0"
axum = { version = "0.7.5", features = [] }
serde = { version = "1.0.204" , features = ["derive"]}
tracing-subscriber = "0.3.18"
tower = "0.4.13"
tower-http = "0.5.2"
async-graphql = { version = "7.0.6", features = ["playground", "log"] }
async-graphql-axum = "7.0.7"
log = "0.4"
anyhow = "1.0.86"
env_logger = "0.11.3"
http = "1.1.0"
uuid = {version = "1.10.0", features = ["v4"]}
tracing = "0.1.40"
dirs = "5.0.1"
reqwest = "0.12.7"
regex = "1.5.4"
scraper = "0.20.0"
url = "2.2.2"
