[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = {workspace = true}
sea-orm-migration = {workspace = true }
async-graphql = { workspace = true}
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = {workspace = true}
migration = {path = "../migration"}