[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
axum = { workspace= true }
serde = { workspace = true}
database = {path = "../database"}
tracing-subscriber = { workspace = true}
sqlx = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true , features = ["cors"]}
async-graphql = { workspace = true }
async-graphql-axum = { workspace  = true}
log = {workspace = true}
anyhow = {workspace = true}
env_logger = {workspace = true}
