[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
axum = { workspace= true, features = ["macros"]  }
serde = { workspace = true}
database = {path = "../database"}
tracing-subscriber = { workspace = true}
sqlx = { workspace = true , features = ["chrono"]}
chrono = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true , features = ["cors"]}
async-graphql = { workspace = true , features = ["chrono"]}
async-graphql-axum = { workspace  = true}
log = {workspace = true}
anyhow = {workspace = true}
env_logger = {workspace = true}
types = {path = "../types"}
http = {workspace = true}
uuid = {workspace = true, features = [ "v4"]}
