[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
database = { path = "../database" }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
http = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
dotenv = {workspace = true}